# xontrib-broot

./: README.md  pyproject.toml
xontrib/: broot.py
